# WorkerManager

./: CMakeLists.txt  Employee.cpp  Employee.h  MainUi.cpp  MainUi.h  Readme.md  Worker.cpp  Worker.h  main.cpp
my_tools/: my_tools.cpp  my_tools.h
